# cowrite

./: .gitignore  README.md  pyproject.toml
src/cowrite/: __init__.py  cli.py  manager.py  render.py  server.py
tests/: test_render.py  test_server.py
